--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "server HTTP con tecnologia electron y express",
   "main": "./src/main.cjs",
   "scripts": {
+    "img": "node server.img.cjs",
     "start": "electron . --inspect",
     "web": "vite",
-    "dev": "concurrently \"npm run web\" \"npm run start\" ",
+    "dev": "concurrently \"npm run img\" \"npm run web\" \"npm run start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sr.Firagon",
@@ -17,6 +18,7 @@
     "vite": "5.2.8"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "4.19.2",
     "vhost": "3.0.2"
   }
