--- a/package.json
+++ b/package.json
@@ -1,25 +1,52 @@
 {
-  "name": "destronando-apache",
+  "name": "httpdethroner",
   "version": "0.0.1",
+  "author": "Marc Lecha Blesa",
   "description": "server HTTP con tecnologia electron y express",
+  "license": "MIT",
   "main": "./src/main.cjs",
   "scripts": {
     "img": "node server.img.cjs",
     "start": "electron . --inspect",
     "web": "vite",
     "dev": "concurrently \"npm run img\" \"npm run web\" \"npm run start\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "electron-builder",
+    "buildWin": "node build-tools/build.cjs"
   },
-  "author": "Sr.Firagon",
-  "license": "MIT",
   "devDependencies": {
+    "asar": "^3.2.0",
     "concurrently": "8.2.2",
     "electron": "29.2.0",
+    "electron-builder": "24.13.3",
+    "electron-packager": "17.1.2",
+    "fs-extra": "^11.2.0",
     "vite": "5.2.8"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "4.19.2",
     "vhost": "3.0.2"
+  },
+  "build": {
+    "appId": "com.Firagon.HTTPdethroner",
+    "productName": "HTTPdethroner",
+    "directories": {
+      "output": "dist"
+    },
+    "mac": {
+      "target": "dmg",
+      "artifactName": "${productName}-${version}-mac.zip"
+    },
+    "win": {
+      "target": "portable",
+      "artifactName": "${productName}-${version}-win.zip"
+    },
+    "linux": {
+      "target": "AppImage",
+      "artifactName": "${productName}-${version}-linux.AppImage"
+    },
+    "portable": {
+      "artifactName": "${productName}-${version}-portable.zip"
+    }
   }
 }
