--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "start": "electron . --inspect",
     "web": "vite",
     "dev": "concurrently \"npm run img\" \"npm run web\" \"npm run start\"",
-    "build": "electron-builder",
-    "buildWin": "node build-tools/build.cjs"
+    "buildWin": "node build-tools/buildElectronApp.cjs"
   },
   "devDependencies": {
-    "asar": "^3.2.0",
+    "asar": "3.2.0",
     "concurrently": "8.2.2",
     "electron": "29.2.0",
     "electron-builder": "24.13.3",
     "electron-packager": "17.1.2",
-    "fs-extra": "^11.2.0",
+    "fs-extra": "11.2.0",
+    "npm": "10.8.1",
     "vite": "5.2.8"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "dotenv": "16.4.5",
     "express": "4.19.2",
     "vhost": "3.0.2"
   },
