--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "dotenv": "16.4.5",
-    "express": "4.19.2",
+    "express": "4.21.0",
+    "serve-index": "1.9.1",
     "sqlite3": "5.1.7",
     "vhost": "3.0.2"
   }
