--- a/.gitattributes
+++ b/.gitattributes
@@ -1,14 +1,14 @@
 * text=auto eol=lf
-*.png -text
-*.jpg -text
-*.jpeg -text
-*.gif -text
-*.bmp -text
-*.tiff -text
-*.webp -text
-*.svg -text
-*.heif -text
-*.ttf -text
-*.otf -text
-*.woff -text
-*.woff2 -text
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.bmp binary
+*.tiff binary
+*.webp binary
+*.svg binary
+*.heif binary
+*.ttf binary
+*.otf binary
+*.woff binary
+*.woff2 binary
