--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,10 @@
+# Set the default behavior, in case people don't have core.autocrlf set.
 * text=auto eol=lf
+*.bat text eol=crlf
+*.cmd text eol=crlf
+*.ps1 text eol=crlf
+
+# Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
 *.jpeg binary
